// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Typography renders a Heading with props 1`] = `
<div>
  <h3
    class="css-15leoai"
    color="red"
    font-family="default"
    font-size="small"
  >
    Heading Three
  </h3>
</div>
`;

exports[`components/Typography renders a Paragraph 1`] = `
<div>
  <p
    class="css-sxvx2"
    font-family="default"
    font-size="small"
  >
    A paragraph.
  </p>
</div>
`;

exports[`components/Typography renders a Paragraph with props 1`] = `
<div>
  <p
    class="css-1f7gn4q"
    color="red"
    font-family="default"
    font-size="small"
  >
    Heading Three
  </p>
</div>
`;

exports[`components/Typography renders an H1 1`] = `
<div>
  <h1
    class="css-1d2g964"
    color="white"
    font-family="default"
    font-size="small,medium,large"
  >
    Heading One
  </h1>
</div>
`;

exports[`components/Typography renders an H2 1`] = `
<div>
  <h2
    class="css-1aamo4l"
    color="white"
    font-family="default"
    font-size="small,medium"
  >
    Heading Two
  </h2>
</div>
`;

exports[`components/Typography renders an H3 1`] = `
<div>
  <h3
    class="css-pazrf9"
    color="white"
    font-family="default"
    font-size="small"
  >
    Heading Three
  </h3>
</div>
`;
